--- a/festo-frontend/product-management/package.json
+++ b/festo-frontend/product-management/package.json
@@ -29,6 +29,7 @@
     "papaparse": "^5.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
+    "xlsx": "^0.15.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
